--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@
               </p>
               <div class="testimonial-slider__author">
                 <img
-                  src="images/avatars/user-04.jpg"
+                  src="images/avatars/designer.jpg"
                   alt="Author image"
                   class="testimonial-slider__avatar"
                 />
