--- a/index.html
+++ b/index.html
@@ -658,7 +658,7 @@
               </p>
               <div class="testimonial-slider__author">
                 <img
-                  src="images/avatars/user-01.jpg"
+                  src="images/avatars/cofounder.jpeg"
                   alt="Author image"
                   class="testimonial-slider__avatar"
                 />
