--- a/index.html
+++ b/index.html
@@ -658,6 +658,7 @@
               </p>
               <div class="testimonial-slider__author">
                 <img
+                width="100%"
                   src="images/avatars/cofounder.jpeg"
                   alt="Author image"
                   class="testimonial-slider__avatar"
