--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
             <li>
               <a class="smoothscroll" href="#portfolio" title="Works">Works</a>
             </li>
+            <li>
+              <a class="smoothscroll" href="#portfolio" title="Works">Works</a>
+            </li>
           </ul>
         </nav>
         <!-- end s-header__nav-wrap -->
@@ -348,12 +351,12 @@
             <div class="folio-item__thumb">
               <a
                 class="folio-item__thumb-link"
-                href="images/portfolio/gallery/g-red-wheel.jpg"
+                href="images/portfolio/gallery/final PHB.png"
                 title="The Red Wheel"
                 data-size="1050x700"
               >
                 <img
-                  src="images/portfolio/red-wheel.jpg"
+                  src="images/portfolio/gallery/final PHB.png"
                   srcset="
                     images/portfolio/red-wheel.jpg    1x,
                     images/portfolio/red-wheel@2x.jpg 2x
@@ -364,7 +367,7 @@
             </div>
             <div class="folio-item__info">
               <div class="folio-item__cat">Branding</div>
-              <h4 class="folio-item__title">The Red Wheel</h4>
+              <h4 class="folio-item__title">Pm Home bakers</h4>
             </div>
             <a
               href="#"
@@ -424,7 +427,7 @@
             <div class="folio-item__thumb">
               <a
                 class="folio-item__thumb-link"
-                href="images/portfolio/gallery/g-oi-logo.jpg"
+                href="images/portfolio/gallery/g-lamp.jpg"
                 title="OI Logo"
                 data-size="1050x700"
               >
@@ -637,6 +640,7 @@
               <div class="testimonial-slider__author">
                 <img
                   width="100%"
+                  height="100%"
                   src="images/avatars/user-02.jpg"
                   alt="Author image"
                   class="testimonial-slider__avatar"
