--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
               <a
                 class="folio-item__thumb-link"
                 href="images/portfolio/gallery/final PHB.png"
-                title="The Red Wheel"
+                title="Menu"
                 data-size="1050x700"
               >
                 <img
@@ -367,18 +367,19 @@
             </div>
             <div class="folio-item__info">
               <div class="folio-item__cat">Branding</div>
-              <h4 class="folio-item__title">Pm Home bakers</h4>
+              <h4 class="folio-item__title">service-icon</h4>
             </div>
-            <a
-              href="#"
-              title="Project Link"
-              class="folio-item__project-link"
+            <a href="#" title="Project Link" class="folio-item__project-link"
               >Project Link</a
             >
             <div class="folio-item__caption">
+              <p></p>
               <p>
-                Vero molestiae sed aut natus excepturi. Et tempora numquam.
-                Temporibus iusto quo.Unde dolorem corrupti neque nisi.
+                Our menu offers a diverse selection of cookies, including
+                classic, fruit, nut, fruit & nut, masala, choco chips, and seeds
+                cookies. Each variety comes with detailed descriptions to help
+                you choose the perfect treat. Enjoy browsing our delicious
+                options!
               </p>
             </div>
           </div>
@@ -407,10 +408,7 @@
               <div class="folio-item__cat">Frontend Design</div>
               <h4 class="folio-item__title">Music Life</h4>
             </div>
-            <a
-              href="#"
-              title="Project Link"
-              class="folio-item__project-link"
+            <a href="#" title="Project Link" class="folio-item__project-link"
               >Project Link</a
             >
             <div class="folio-item__caption">
@@ -445,10 +443,7 @@
               <div class="folio-item__cat">Branding</div>
               <h4 class="folio-item__title">OI Logo</h4>
             </div>
-            <a
-              href="#"
-              title="Project Link"
-              class="folio-item__project-link"
+            <a href="#" title="Project Link" class="folio-item__project-link"
               >Project Link</a
             >
             <div class="folio-item__caption">
@@ -483,10 +478,7 @@
               <div class="folio-item__cat">Frontend Design</div>
               <h4 class="folio-item__title">Corrugated Sheets</h4>
             </div>
-            <a
-              href="#"
-              title="Project Link"
-              class="folio-item__project-link"
+            <a href="#" title="Project Link" class="folio-item__project-link"
               >Project Link</a
             >
             <div class="folio-item__caption">
@@ -521,11 +513,7 @@
               <div class="folio-item__cat">Frontend Design</div>
               <h4 class="folio-item__title">Wooocraft</h4>
             </div>
-            <a
-              href="#"
-              title="Project Link"
-              class="folio-item__project-link"
-            >
+            <a href="#" title="Project Link" class="folio-item__project-link">
               Project Link
             </a>
             <div class="folio-item__caption">
@@ -560,10 +548,7 @@
               <div class="folio-item__cat">Frontend Design</div>
               <h4 class="folio-item__title">The Lamp</h4>
             </div>
-            <a
-              href="#"
-              title="Project Link"
-              class="folio-item__project-link"
+            <a href="#" title="Project Link" class="folio-item__project-link"
               >Project Link</a
             >
             <div class="folio-item__caption">
@@ -662,7 +647,7 @@
               </p>
               <div class="testimonial-slider__author">
                 <img
-                width="100%"
+                  width="100%"
                   src="images/avatars/cofounder.jpeg"
                   alt="Author image"
                   class="testimonial-slider__avatar"
