--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
             </div>
             <div class="folio-item__info">
               <div class="folio-item__cat">Branding</div>
-              <h4 class="folio-item__title">service-icon</h4>
+              <h4 class="folio-item__title">Menu Design</h4>
             </div>
             <a href="#" title="Project Link" class="folio-item__project-link"
               >Project Link</a
@@ -406,15 +406,18 @@
             </div>
             <div class="folio-item__info">
               <div class="folio-item__cat">Frontend Design</div>
-              <h4 class="folio-item__title">Music Life</h4>
+              <h4 class="folio-item__title">Web Development</h4>
             </div>
             <a href="#" title="Project Link" class="folio-item__project-link"
               >Project Link</a
             >
             <div class="folio-item__caption">
               <p>
-                Vero molestiae sed aut natus excepturi. Et tempora numquam.
-                Temporibus iusto quo.Unde dolorem corrupti neque nisi.
+                Building modern web applications requires skill and knowledge in
+                various technologies. Effective use of tools and frameworks is
+                essential. Ensuring responsive design and functionality is key
+                to success. Collaboration and communication within a team make a
+                significant difference.
               </p>
             </div>
           </div>
@@ -448,8 +451,10 @@
             >
             <div class="folio-item__caption">
               <p>
-                Vero molestiae sed aut natus excepturi. Et tempora numquam.
-                Temporibus iusto quo.Unde dolorem corrupti neque nisi.
+                Crafting logos demands creativity and precision. A simple design
+                is more memorable. Ensure scalability for all platforms. Colors
+                and fonts should align with the brand. Timeless logos withstand
+                trends.
               </p>
             </div>
           </div>
@@ -746,7 +751,7 @@
               <p>
                 Sriram Nagar Kalarampatti <br />
                 Salem, Tamilnadu<br />
-                <a href="tel:197-543-2345">infoleveq@gmail.com</a>
+                <a href="#">infoleveq@gmail.com</a>
               </p>
             </div>
 
