--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               <a class="smoothscroll" href="#portfolio" title="Works">Works</a>
             </li>
             <li>
-              <a class="smoothscroll" href="#portfolio" title="Works">Works</a>
+              <a class="smoothscroll" href="#portfolio" title="Works">Carrer</a>
             </li>
           </ul>
         </nav>
