--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <!--- basic page needs
     ================================================== -->
+    <meta name="google-site-verification" content="loZgpxl6pJAtrQ6MsGrnNgVb8dKmn7-tqePXMyFgi2w" />
     <meta charset="utf-8" />
     <title>LeveQ Technology</title>
     <meta name="description" content="" />
